better folder structure

--- a/manim_web_presenter/web/index.html
+++ b/manim_web_presenter/web/index.html
@@ -3,12 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manim Web Presenter</title>
 </head>
 
 <body>
+    <div class="player">
+        <video controls>
+            <source src="2201830969_222290472_3962032669.mp4" type"video/mp4">
+            Your browser doesn't support HTML5 videos.
+        </video>
+    </div>
+
     <script src="index.js"></script>
 </body>
 
