--- a/manim_web_presenter/web/index.html
+++ b/manim_web_presenter/web/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>Manim Web Presenter</title>
 </head>
 
-<body>
-    <div class="player">
-        <video controls>
-            <source src="2201830969_222290472_3962032669.mp4" type"video/mp4">
+<body style="margin:0px;background-color:black;width:100vw;height:100vh;display:flex;">
+    <div class="player" style="display:flex;min-width:100vw;max-width:100vw;width:100vw;">
+        <video controls style="min-width:inherit;max-width:inherit;width:inherit;">
+            <source src="2201830969_222290472_3962032669.mp4" type="video/mp4">
             Your browser doesn't support HTML5 videos.
         </video>
     </div>
