--- a/web/src/index.html
+++ b/web/src/index.html
@@ -7,15 +7,13 @@
     <title>Manim Web Presenter</title>
 </head>
 
-<body style="margin:0px;background-color:black;width:100vw;height:100vh;display:flex;">
-    <div class="player" style="display:flex;min-width:100vw;max-width:100vw;width:100vw;">
-        <video controls style="min-width:inherit;max-width:inherit;width:inherit;">
+<body>
+    <div class="player">
+        <video controls>
             <source src="2201830969_222290472_3962032669.mp4" type="video/mp4">
             Your browser doesn't support HTML5 videos.
         </video>
     </div>
-
-    <script src="index.js"></script>
 </body>
 
 </html>
