--- a/web/src/index.html
+++ b/web/src/index.html
@@ -8,11 +8,30 @@
 </head>
 
 <body>
-    <div class="player">
-        <video controls>
-            <source src="2201830969_222290472_3962032669.mp4" type="video/mp4">
-            Your browser doesn't support HTML5 videos.
-        </video>
+    <div class="content">
+        <div class="side-bar">
+            <div class="timeline">
+            </div>
+
+            <div class="time-spent">
+                15.3.32.15
+            </div>
+        </div>
+
+        <div class="main">
+            <div class="playback">
+                <video controls>
+                    <source src="2201830969_222290472_3962032669.mp4" type="video/mp4" />
+                    Your browser doesn't support HTML5 videos.
+                </video>
+            </div>
+
+            <div class="controls">
+                <button>&lt;</button>
+                <button>||</button>
+                <button>&gt;</button>
+            </div>
+        </div>
     </div>
 </body>
 
