added complete movie file to fallback.html

--- a/manim_web_presenter/web/fallback.html
+++ b/manim_web_presenter/web/fallback.html
@@ -9,6 +9,9 @@
 
 <body>
     <h1>Manim Web Presenter Fallback</h1>
+
+    <a href="movie.mp4">Entire Presentation</a>
+
     {% for slide in slides %}
     <h2>{{ slide.name }}</h2>
     <ul>
