Video playback of large slides

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -26,9 +26,9 @@
             </div>
 
             <div class="controls">
-                <button>&lt;</button>
-                <button>||</button>
-                <button>&gt;</button>
+                <button id="play-previous-slide">&lt;</button>
+                <button id="play-pause">||</button>
+                <button id="play-next-slide">&gt;</button>
             </div>
         </div>
     </div>
