--- a/web/src/index.html
+++ b/web/src/index.html
@@ -20,7 +20,7 @@
 
         <div class="main">
             <div class="playback">
-                <video>
+                <video controls>
                     Your browser doesn't support HTML5 videos.
                 </video>
             </div>
