fixed flashing with double-bufferin

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -20,8 +20,10 @@
 
         <div class="main">
             <div class="playback">
-                <!-- <video controls> -->
-                <video>
+                <video id="video0" class="main-video" preload="auto" muted>
+                    Your browser doesn't support HTML5 videos.
+                </video>
+                <video id="video1" class="main-video" preload="auto" muted>
                     Your browser doesn't support HTML5 videos.
                 </video>
             </div>
