--- a/web/src/index.html
+++ b/web/src/index.html
@@ -11,27 +11,27 @@
     <div class="content">
         <div class="side-bar">
             <div class="timeline">
+                [timeline here]
             </div>
 
             <div class="time-spent">
-                15.3.32.15
+                [time spent here]
             </div>
         </div>
 
         <div class="main">
-            <div class="playback">
-                <video id="video0" class="main-video" preload="auto" muted>
-                    Your browser doesn't support HTML5 videos.
-                </video>
-                <video id="video1" class="main-video" preload="auto" muted>
-                    Your browser doesn't support HTML5 videos.
-                </video>
-            </div>
-
             <div class="controls">
                 <button id="play-previous-slide">&lt;</button>
-                <button id="play-pause">||</button>
                 <button id="play-next-slide">&gt;</button>
+            </div>
+
+            <div id="videos-div">
+                <video id="video0" class="main-video" muted>
+                    Your browser doesn't support HTML5 videos.
+                </video>
+                <video id="video1" class="main-video" muted>
+                    Your browser doesn't support HTML5 videos.
+                </video>
             </div>
         </div>
     </div>
