added button control

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -21,15 +21,16 @@
 
         <div class="main">
             <div class="controls">
-                <button id="play-previous-slide">&lt;</button>
-                <button id="play-next-slide">&gt;</button>
+                <button id="play-previous-slide"><img /></button>
+                <button id="play-next-slide"><img /></button>
+                <button id="enter-fullscreen"><img /></button>
             </div>
 
             <div id="videos-div">
-                <video id="video0" class="main-video" muted>
+                <video id="video0" class="main-video" muted width="720" height="480">
                     Your browser doesn't support HTML5 videos.
                 </video>
-                <video id="video1" class="main-video" muted>
+                <video id="video1" class="main-video" muted width="720" height="480">
                     Your browser doesn't support HTML5 videos.
                 </video>
             </div>
