--- a/web/src/index.html
+++ b/web/src/index.html
@@ -8,32 +8,26 @@
 </head>
 
 <body>
-    <div class="content">
-        <div class="side-bar">
-            <div class="timeline">
-                [timeline here]
-            </div>
+    <div class="split left">
+        <div class="centered">
+            <table id="timeline"></table>
+        </div>
+    </div>
 
-            <div class="time-spent">
-                [time spent here]
-            </div>
+    <div class="split right">
+        <div id="controls">
+            <button id="play-previous-slide"><img /></button>
+            <button id="play-next-slide"><img /></button>
+            <button id="enter-fullscreen"><img /></button>
         </div>
 
-        <div class="main">
-            <div class="controls">
-                <button id="play-previous-slide"><img /></button>
-                <button id="play-next-slide"><img /></button>
-                <button id="enter-fullscreen"><img /></button>
-            </div>
-
-            <div id="videos-div">
-                <video id="video0" class="main-video" muted width="720" height="480">
-                    Your browser doesn't support HTML5 videos.
-                </video>
-                <video id="video1" class="main-video" muted width="720" height="480">
-                    Your browser doesn't support HTML5 videos.
-                </video>
-            </div>
+        <div id="videos-div">
+            <video id="video0" class="main-video" muted width="720" height="480">
+                Your browser doesn't support HTML5 videos.
+            </video>
+            <video id="video1" class="main-video" muted width="720" height="480">
+                Your browser doesn't support HTML5 videos.
+            </video>
         </div>
     </div>
 </body>
