--- a/web/src/index.html
+++ b/web/src/index.html
@@ -8,15 +8,22 @@
 </head>
 
 <body>
-    <div class="split left">
-        <div class="centered">
-            <table id="timeline"></table>
-        </div>
+    <div class="split left padded-left">
+        <h1>Timeline</h1>
+        <table id="timeline">
+            <!-- indicator -->
+            <col style="width=30px">
+            <!-- slide type -->
+            <col style="width=30px">
+            <!-- button -->
+            <col>
+        </table>
     </div>
 
     <div class="split right">
         <div id="controls">
             <button id="play-previous-slide"><img /></button>
+            <button id="play-current-slide"><img /></button>
             <button id="play-next-slide"><img /></button>
             <button id="enter-fullscreen"><img /></button>
         </div>
