started caching, broken

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -8,7 +8,14 @@
 </head>
 
 <body>
-    <div class="split left padded-left">
+    <div class="split left padded-left padded-right">
+        <div id="caching">
+            <button id="cache-button">Cache Videos</button>
+            <div id="progress">
+                <div id="progress-bar"></div>
+            </div>
+        </div>
+
         <h1>Timeline</h1>
         <table id="timeline">
             <!-- indicator -->
