--- a/web/src/index.html
+++ b/web/src/index.html
@@ -32,7 +32,18 @@
             <button id="play-previous-slide"><img /></button>
             <button id="play-current-slide"><img /></button>
             <button id="play-next-slide"><img /></button>
-            <button id="enter-fullscreen"><img /></button>
+
+            <button id="enter-fullscreen" class="spaced-button"><img /></button>
+
+            <input type="number" id="cache-batch-size-input" class="spaced-button number-input">
+            <button id="cache-batch-size-button">Set Cache Batch Size</button>
+            <input type="number" id="slides-to-auto-load-input" class="number-input">
+            <button id="slides-to-auto-load-button">Set Slides To Auto Load</button>
+            <input type="number" id="slides-to-keep-input" class="spaced-button number-input">
+            <button id="slides-to-keep-button">Set Slides To Keep</button>
+
+            <button id="toggle-fallback" class="spaced-button"></button>
+            <a href="fallback.html">No-Script Fallback</a>
         </div>
 
         <div id="videos-div">
