--- a/web/src/index.html
+++ b/web/src/index.html
@@ -38,9 +38,9 @@
             <input type="number" id="cache-batch-size-input" class="spaced-button number-input">
             <button id="cache-batch-size-button">Set Cache Batch Size</button>
             <input type="number" id="slides-to-auto-load-input" class="number-input">
-            <button id="slides-to-auto-load-button">Set Slides To Auto Load</button>
+            <button id="slides-to-auto-load-button">Set Future Slides to Buffer</button>
             <input type="number" id="slides-to-keep-input" class="spaced-button number-input">
-            <button id="slides-to-keep-button">Set Slides To Keep</button>
+            <button id="slides-to-keep-button">Set Past Slides to Buffer</button>
 
             <button id="toggle-fallback" class="spaced-button"></button>
             <a href="fallback.html">No-Script Fallback</a>
