added front end timer

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -42,6 +42,8 @@
             <input type="number" id="slides-to-keep-input" class="spaced-button number-input">
             <button id="slides-to-keep-button">Set Past Slides to Buffer</button>
 
+            <button id="export" class="spaced-button">Export Timestamps</button>
+
             <button id="toggle-fallback" class="spaced-button"></button>
             <a href="fallback.html">No-Script Fallback</a>
         </div>
